feat: define CreateModelResponse proto
