# ts/api/v1/collector_server.pb.ts
@@ -33,7 +33,7 @@ type BaseUsageDetails = {
 }
 
 export type UsageDetails = BaseUsageDetails
-  & OneOf<{ create_chat_completion: CreateChatCompletion; create_completion: CreateCompletion; create_audio_transcription: CreateAudioTranscription }>
+  & OneOf<{ create_chat_completion: CreateChatCompletion; create_completion: CreateCompletion; create_audio_transcription: CreateAudioTranscription; create_model_response: CreateModelResponse }>
 
 export type CreateChatCompletion = {
   model_id?: string
@@ -60,6 +60,12 @@ export type CreateAudioTranscription = {
   text_tokens?: number
   audio_tokens?: number
   input_duration_seconds?: number
+  runtime_time_to_first_token_ms?: number
+}
+
+export type CreateModelResponse = {
+  model_id?: string
+  time_to_first_token_ms?: number
   runtime_time_to_first_token_ms?: number
 }
 
